--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bem-react/classname": "^1.5.8",
+    "@bem-react/core": "^3.0.1",
+    "@bem-react/di": "^2.2.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,10 +13,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@yandex/ui": "2.55.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-scripts": "4.0.0",
-    "typescript": "^4.0.3",
+    "typescript": "3.7.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -39,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@yandex/themekit": "1.6.4"
   }
 }
