feat: example with 2 custom theme and dinamic imports

--- a/themekit.config.json
+++ b/themekit.config.json
@@ -1,6 +1,7 @@
 {
     "entry": {
-      "drive": "./src/theme/drive.theme.json"
+      "drive": "./src/theme/drive.theme.json",
+      "cat": "./src/theme/cat.theme.json"
     },
     "output": {
       "css": {
